<resources>
    <string name="app_name">SMPT</string>

    <string name="login__button__login">Zaloguj</string>
    <string name="login__label__login">Wprowadź nazwę użytkownika, aby przejść do aplikacji.</string>
    <string name="login__hint__login">Nazwa użytkownika</string>
    <string name="login__hint__password">Hasło</string>
    <string name="login__hint__cert">Klucz certyfikatu</string>
    <string name="main_map_description">View representing map</string>
    <string name="main_map_button_text">Show Troops</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

    <string name="settings__label">Ustawienia</string>
    <string name="settings__label__sign_size">Wielkość znaku (w pikselach)</string>
    <string name="settings__label__user_color">Kolor własnego znacznika</string>
    <string name="settings__label__other_user_color">Kolor obcego znacznika</string>
    <string name="settings__button__cancel">Cofnij</string>
    <string name="settings__button__next">Dalej</string>
    <string name="settings__button__ok">Ok</string>
    <string name="settings__label__pixels">pikseli</string>

    <string name="dialog__button__next">Dodaj</string>
    <string name="dialog_sign__label__choose_sign">Wybierz znak:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>